# tg-llm-bridge

./: .env.example  .gitignore  README.md  check_providers.py  pyproject.toml
.github/workflows/: ci.yml
deploy/: llm-tg-bot.service.example  tg-llm-bridge.service.example
llm_tg_bot/: __init__.py  bot.py  commands.py  config.py  main.py  providers.py  request_runner.py  session.py  telegram_format.py  workdirs.py
tests/: test_bot.py  test_claude_session.py  test_commands.py  test_rendering.py  test_session.py  test_workdirs.py
tg_llm_bridge/: __init__.py  bot.py  commands.py  config.py  main.py  providers.py  session.py
